--- a/julia/problem_023.ipynb
+++ b/julia/problem_023.ipynb
@@ -16,7 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using BenchmarkTools"
+    "using BenchmarkTools\n",
+    "include(\"./euler.jl\");"
    ]
   },
   {
@@ -150,16 +151,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d99e98c",
+   "id": "209ad304",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  4.243 s (97579686 allocations: 2.70 GiB)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -171,21 +165,53 @@
     }
    ],
    "source": [
-    "@btime non_abundants_sums(combinations(filter(is_abundant, 1:hi)))"
+    "non_abundants_sums(combinations(filter(is_abundant, 1:hi)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5d99e98c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BenchmarkTools.Trial: 1 sample with 1 evaluation.\n",
+       " Single result which took \u001b[34m11.278 s\u001b[39m (34.48% GC) to evaluate,\n",
+       " with a memory estimate of \u001b[33m3.52 GiB\u001b[39m, over \u001b[33m97636884\u001b[39m allocations."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = @benchmark non_abundants_sums(combinations(filter(is_abundant, 1:hi)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b3a0f25a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "euler.save_benchmark(23, b);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.5",
+   "display_name": "Julia 1.11.0",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.5"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
